syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.persistencetier.protobuf";


package reservation;

message EmptyReservation{

}

message ReservationSellerRequest{
  int32 cvr = 1;
}

message ReservationRequest{
  int32 id = 1;
}

message CreateReservationRequest{
  string status = 1;
  string customer_id = 2;
  string startPickupTime = 3;
  string endPickupTime = 4;
  int32 cvr = 5;
  int32 foodPackId = 6;

}

message ReservationResponse{
  int32 id = 1;
  string status = 2;
  int32 foodPack_id = 3;
  string customer_id = 4;
  string startPickupTime = 5;
  string endPickupTime = 6;
  int32 cvr = 7;
}

message SearchReservation{
  int32 id = 1;
  string status = 2;
  int32 foodPack_id = 3;
  string customer_id = 4;
  string startPickupTime = 5;
  string endPickupTime = 6;
  int32 cvr = 7;
}

service ReservationService{
  rpc createReservation(CreateReservationRequest) returns (ReservationResponse);
  rpc getReservationById(ReservationRequest) returns (ReservationResponse);
  rpc getReservationsBySellerCvr(ReservationSellerRequest) returns (stream ReservationResponse);
  rpc deleteReservationById(ReservationRequest) returns (ReservationResponse);
  rpc searchReservation(SearchReservation) returns (stream ReservationResponse);
  rpc getAllReservations(EmptyReservation) returns (stream ReservationResponse);
}



